# meteo-etl

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml  pytest.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 3967a578f902_add_updated_created_to_observations.py  4bcfdcf6e86a_change_raw_response_data_to_error_data_.py  a1cbf11c1945_change_fetch_status_to_enum.py  ca6dba1b845b_baseline.py
dashboard/: queries.py  streamlit_app.py
etl/: app.py  cli.py  config.py  constants.py  db.py  extract.py  load.py  logger.py  models.py  sources.py
streaming/: cli.py  config.py  consumer.py  events.py  load.py  producer.py
streaming/schemas/: fetch_event.avsc
tests/: conftest.py  test_end_to_end.py  test_load.py
tests/etl/: test_app.py  test_extract.py  test_load.py
tests/fixtures/: conftest.py  meteo-data.json  meteo-payload.json
tests/streaming/: test_consumer.py  test_end_to_end.py  test_events.py  test_producer.py  test_stream_load.py
tests/tests/: test_app.py
